--- a/Dating.API/appsettings.json
+++ b/Dating.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+  "CloudName": "dav99ftfa",
+  "ApiKey": "332715146742654",
+  "ApiSecret": "MegUWZF-KIG_Rtr06j_h6Ut8y58"
+  }
 }
