--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.9",
+    "@angular/animations": "^8.2.13",
     "@angular/common": "~8.2.9",
     "@angular/compiler": "~8.2.9",
     "@angular/core": "~8.2.9",
@@ -24,8 +24,12 @@
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-gallery": "^5.10.0",
     "rxjs": "~6.4.0",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
